src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
}

body {
  background-color: #fdfaf6;
}

::selection {
  background-color: #d4a7ff;
  color: #240552;
}

.text-gradient {
  background: linear-gradient(90deg, #d6a03e, #f0c95e, #d6a03e);
  background-size: 200% auto;
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  animation: shimmer 3s linear infinite;
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}
.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.protected-page * {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
}

.protected-page input,
.protected-page textarea {
  -webkit-user-select: text;
  -moz-user-select: text;
  user-select: text;
}

.protected-page img {
  pointer-events: none;
}

